workspace = { members = [ "advance-trait", "all-patterns", "arr", "art",
  "borrow", "box-study", "closure",
  "complex-num",
  "composite", "enum-type", "flow-control", "formatted-output",
  "function", "generic", "hashmap", "iterator", "lifetime", "match-if-let", "method", "minigrep", "my-lib", "my-project",
  "number", "option",
  "other-type",
  "own", "panic", "pattern-match", "restaurant", "result",
  "statement",
  "struct-memory", "trait-object", "trait-study", "use-study",
  "variables", "vector-study",
] }
[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
